examples/errors/cyclic_imports/foo.aaa
from "main" import main

fn foo begin nop end
